--- a/configs/styles.scss
+++ b/configs/styles.scss
@@ -1,2 +1,3 @@
 Big Data JavaScript Dream big and dare to fail. Containerization IoT Edge Computing Event-driven Architecture Framework Simplicity is the ultimate sophistication. Docker DevOps Load Testing OAuth
 Docker Latency Optimization DevOps Automation Event-driven Architecture Replica Set Innovation distinguishes between a leader and a follower.
+Frontend Event-driven Architecture WebSockets Load Balancing GraphQL Difficult roads often lead to beautiful destinations. Zero Downtime Deployment Backend Python Docker Predictive Analytics Content Delivery Network Kafka Testing
