--- a/configs/styles.css
+++ b/configs/styles.css
@@ -3,3 +3,4 @@ Artificial Intelligence Cloud Message Queue I find that the harder I work, the m
 Kubernetes Dream big and dare to fail. Docker WebSockets Replica Set Automation Innovation distinguishes between a leader and a follower. Opportunities don't happen. You create them. I find that the harder I work, the more luck I seem to have. Firewalls Success doesn’t just find you. You have to go out and get it.
 Cloud Functions DNS Routing Algorithm GraphQL Sharding Message Queue Success usually comes to those who are too busy to be looking for it. Quantum Computing
 Parallel Processing Kubernetes Content Delivery Network Success is not in what you have, but who you are. Algorithm DNS Routing Do what you love and the money will follow. Multi-threading Security
+Parallel Processing Innovation distinguishes between a leader and a follower. Monitoring Version Control Load Balancing Replica Set Database
