--- a/configs/styles.css
+++ b/configs/styles.css
@@ -1,2 +1,3 @@
 Optimization The only way to do great work is to love what you do. Testing Sharding Happiness is not something ready made. It comes from your own actions. Edge Computing Zero Downtime Deployment Pull Request
 Artificial Intelligence Cloud Message Queue I find that the harder I work, the more luck I seem to have. Stay hungry, stay foolish. Do what you love and the money will follow. NLP Innovation distinguishes between a leader and a follower.
+Kubernetes Dream big and dare to fail. Docker WebSockets Replica Set Automation Innovation distinguishes between a leader and a follower. Opportunities don't happen. You create them. I find that the harder I work, the more luck I seem to have. Firewalls Success doesn’t just find you. You have to go out and get it.
